--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,7 @@
 
     <color name="mainBackground">#796F9A</color>
     <color name="secondaryBackground">#D4CDF3</color>
+    <color name="DarkText">#404040</color>
     <color name="TextGrey">#B0B0B0</color>
+    <color name="red">#FF4040</color>
 </resources>
