--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -1,38 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:showIn = "navigation_view">
+    tools:showIn="navigation_view">
 
-    <group
-        android:checkableBehavior="single">
-
+    <group android:checkableBehavior="single">
+        <item
+            android:id="@+id/nav_account"
+            android:icon="@drawable/nav_account"
+            android:title="Профиль" />
         <item
             android:id="@+id/nav_home"
             android:icon="@drawable/nav_home"
-            android:title="На главную"/>
+            android:title="На главную" />
 
         <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/nav_settings"
-            android:title="Настройки"/>
+            android:title="Настройки" />
 
         <item
             android:id="@+id/nav_about"
             android:icon="@drawable/nav_about"
-            android:title="О приложении"/>
+            android:title="О приложении" />
     </group>
 
-    <item
-        android:title="">
+    <item android:title="">
         <menu>
             <item
                 android:id="@+id/nav_logout"
                 android:icon="@drawable/nav_logout"
-                android:title="Выйти из аккаунта"/>
+                android:title="Выйти из аккаунта" />
             <item
                 android:id="@+id/nav_exit"
                 android:icon="@drawable/nav_logout"
-                android:title="Выйти из приложения"/>
+                android:title="Выйти из приложения" />
 
 
         </menu>
