Created main menu. Added database func.

--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -16,6 +16,7 @@
         android:text="@string/gitLink"
         android:textSize="24sp"
         android:textStyle="bold"
+        android:textColorLink="@color/linkBlue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -35,7 +36,7 @@
         android:layout_width="368dp"
         android:layout_height="59dp"
         android:text="@string/version"
-        android:textColor="@color/DarkText"
+        android:textColor="@color/white"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -50,7 +51,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="О приложении:"
-        android:textColor="@color/DarkText"
+        android:textColor="@color/white"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView3"
