--- a/app/src/main/res/layout/item_view.xml
+++ b/app/src/main/res/layout/item_view.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_marginTop="10dp"
+    android:id="@+id/main_container"
     android:background="@color/mainBackground"
     android:layout_height="wrap_content">
 
@@ -11,7 +12,7 @@
         android:id="@+id/imageView"
         android:layout_width="100dp"
         android:layout_height="130dp"
-        android:layout_marginRight="10dp" />
+        android:layout_marginEnd="10dp" />
 
 
     <TextView
@@ -22,12 +23,12 @@
         android:layout_marginStart="58dp"
         android:layout_toEndOf="@+id/imageView"
         android:textColor="@color/black"
-        android:textSize="30dp"
+        android:textSize="30sp"
         android:theme="@style/Button.Grey"
         tools:text="Name" />
 
     <TextView
-        android:id="@+id/email"
+        android:id="@+id/age"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/name"
@@ -43,7 +44,7 @@
         android:layout_width="match_parent"
         android:layout_height="2dp"
         android:layout_below="@+id/imageView"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="27dp"
         android:background="@color/black" />
 
 </RelativeLayout>
