--- a/app/src/main/res/layout/activity_ticket.xml
+++ b/app/src/main/res/layout/activity_ticket.xml
@@ -4,6 +4,186 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/mainBackground"
     tools:context=".Ticket">
 
+    <ImageView
+        android:id="@+id/ticketPoster"
+        android:layout_width="127dp"
+        android:layout_height="198dp"
+        android:layout_marginBottom="296dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/ticketCalendarView"
+        app:layout_constraintHorizontal_bias="0.727"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ticketTitleBack"
+        app:layout_constraintVertical_bias="0.918"
+        app:srcCompat="@drawable/poster3" />
+
+    <View
+        android:id="@+id/ticketTitleBack"
+        android:layout_width="409dp"
+        android:layout_height="72dp"
+        android:background="@color/mainBackground"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/ticketTitle"
+        android:layout_width="290dp"
+        android:layout_height="39dp"
+        android:background="@drawable/rounded_corner"
+        android:gravity="center"
+        android:text="Выбор билета"
+        android:textColor="@color/DarkText"
+        android:textSize="25sp"
+        app:layout_constraintBottom_toBottomOf="@+id/ticketTitleBack"
+        app:layout_constraintEnd_toEndOf="@+id/ticketTitleBack"
+        app:layout_constraintStart_toStartOf="@+id/ticketTitleBack"
+        app:layout_constraintTop_toTopOf="@+id/ticketTitleBack" />
+
+    <CalendarView
+        android:id="@+id/ticketCalendarView"
+        android:layout_width="223dp"
+        android:layout_height="193dp"
+        android:layout_marginTop="34dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.377"
+        app:layout_constraintStart_toEndOf="@+id/ticketPoster"
+        app:layout_constraintTop_toBottomOf="@+id/ticketTitleBack"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/ticketDate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/secondaryBackground"
+        android:text="Дата"
+        app:layout_constraintBottom_toTopOf="@+id/ticketCalendarView"
+        app:layout_constraintEnd_toEndOf="@+id/ticketCalendarView"
+        app:layout_constraintStart_toStartOf="@+id/ticketCalendarView" />
+
+    <TextView
+        android:id="@+id/ticketNumber"
+        android:layout_width="96dp"
+        android:layout_height="45dp"
+        android:text="Количество билетов"
+        android:textColor="@color/secondaryBackground"
+        app:layout_constraintBottom_toTopOf="@+id/textView10"
+        app:layout_constraintEnd_toStartOf="@+id/minus"
+        app:layout_constraintHorizontal_bias="0.971"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ticketTime"
+        app:layout_constraintVertical_bias="0.312" />
+
+    <EditText
+        android:id="@+id/ticketSetTime"
+        android:layout_width="111dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginEnd="20dp"
+        android:text="12:00"
+        android:gravity="center"
+        android:ems="10"
+        android:inputType="time"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ticketCalendarView" />
+
+    <TextView
+        android:id="@+id/ticketTime"
+        android:layout_width="111dp"
+        android:layout_height="45dp"
+        android:textColor="@color/secondaryBackground"
+        android:text="Время"
+        app:layout_constraintBottom_toBottomOf="@+id/ticketSetTime"
+        app:layout_constraintEnd_toStartOf="@+id/ticketSetTime"
+        app:layout_constraintTop_toTopOf="@+id/ticketSetTime" />
+
+    <TextView
+        android:id="@+id/ticketName"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:text="Название"
+        app:layout_constraintEnd_toEndOf="@+id/ticketPoster"
+        app:layout_constraintStart_toStartOf="@+id/ticketPoster"
+        app:layout_constraintTop_toBottomOf="@+id/ticketPoster" />
+
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="111dp"
+        android:layout_height="32dp"
+        android:text="Итого:"
+        android:textColor="@color/secondaryBackground"
+        app:layout_constraintBottom_toBottomOf="@+id/ticketResult"
+        app:layout_constraintEnd_toStartOf="@+id/ticketResult"
+        app:layout_constraintTop_toTopOf="@+id/ticketResult"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <Button
+        android:id="@+id/ticketButton"
+        android:layout_width="126dp"
+        android:layout_height="64dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="16dp"
+        android:textColor="@color/DarkText"
+        android:text="КУПИТЬ"
+        android:onClick="ticketComplete"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ticketResult" />
+
+    <TextView
+        android:id="@+id/ticketResult"
+        android:layout_width="111dp"
+        android:layout_height="32dp"
+        android:layout_marginTop="460dp"
+        android:layout_marginEnd="16dp"
+        android:gravity="center"
+        android:text="300Р"
+        android:textColor="@color/secondaryBackground"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/ticketTitleBack" />
+
+    <Button
+        android:id="@+id/plus"
+        android:layout_width="40dp"
+        android:layout_height="45dp"
+        android:layout_marginEnd="16dp"
+        android:text="+"
+        android:onClick="plus"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/ticketNumber"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/ticketNumber"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <Button
+        android:id="@+id/minus"
+        android:layout_width="40dp"
+        android:layout_height="45dp"
+        android:layout_marginEnd="44dp"
+        android:text="-"
+        android:onClick="minus"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/ticketNumber"
+        app:layout_constraintEnd_toStartOf="@+id/plus"
+        app:layout_constraintTop_toTopOf="@+id/ticketNumber"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/ticketCount"
+        android:layout_width="32dp"
+        android:layout_height="45dp"
+        android:text="1"
+        android:gravity="center"
+        app:layout_constraintBottom_toBottomOf="@+id/ticketNumber"
+        app:layout_constraintEnd_toStartOf="@+id/plus"
+        app:layout_constraintStart_toEndOf="@+id/minus"
+        app:layout_constraintTop_toTopOf="@+id/ticketNumber" />
 </androidx.constraintlayout.widget.ConstraintLayout>
