--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/secondaryBackground"
     android:theme="@style/Button.Grey"
-    tools:context=".MainActivity">
+    tools:context=".MainScreen">
 
 
     <TextView
