--- a/app/src/main/res/layout/activity_ticket.xml
+++ b/app/src/main/res/layout/activity_ticket.xml
@@ -9,15 +9,14 @@
 
     <ImageView
         android:id="@+id/ticketPoster"
-        android:layout_width="127dp"
-        android:layout_height="198dp"
-        android:layout_marginBottom="296dp"
+        android:layout_width="174dp"
+        android:layout_height="250dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/ticketCalendarView"
-        app:layout_constraintHorizontal_bias="0.727"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ticketTitleBack"
-        app:layout_constraintVertical_bias="0.918"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.201"
         app:srcCompat="@drawable/poster3" />
 
     <View
@@ -48,62 +47,55 @@
 
     <CalendarView
         android:id="@+id/ticketCalendarView"
-        android:layout_width="223dp"
-        android:layout_height="193dp"
-        android:layout_marginTop="34dp"
-        
+        android:layout_width="232dp"
+        android:layout_height="302dp"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.377"
+        app:layout_constraintHorizontal_bias="0.6"
         app:layout_constraintStart_toEndOf="@+id/ticketPoster"
         app:layout_constraintTop_toBottomOf="@+id/ticketTitleBack"
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
-        android:id="@+id/ticketDate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/secondaryBackground"
-        android:text="Дата"
-        app:layout_constraintBottom_toTopOf="@+id/ticketCalendarView"
-        app:layout_constraintEnd_toEndOf="@+id/ticketCalendarView"
-        app:layout_constraintStart_toStartOf="@+id/ticketCalendarView" />
-
-    <TextView
         android:id="@+id/ticketNumber"
         android:layout_width="96dp"
         android:layout_height="45dp"
-        android:text="Количество билетов"
+        android:gravity="center"
+        android:text="Количество билетов:"
         android:textColor="@color/secondaryBackground"
-        app:layout_constraintBottom_toTopOf="@+id/textView10"
-        app:layout_constraintEnd_toStartOf="@+id/minus"
-        app:layout_constraintHorizontal_bias="0.971"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ticketTime"
-        app:layout_constraintVertical_bias="0.312" />
+        android:textSize="16dp"
+        app:layout_constraintEnd_toEndOf="@+id/ticketTime"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/ticketTime"
+        app:layout_constraintTop_toBottomOf="@+id/ticketTime" />
 
     <EditText
         android:id="@+id/ticketSetTime"
         android:layout_width="111dp"
         android:layout_height="45dp"
-        android:layout_marginTop="48dp"
-        android:layout_marginEnd="20dp"
-        android:text="12:00"
-        android:gravity="center"
+        android:layout_marginStart="4dp"
         android:ems="10"
+        android:gravity="center"
         android:inputType="time"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ticketCalendarView" />
+        android:text="12:00"
+        app:layout_constraintBottom_toBottomOf="@+id/ticketTime"
+        app:layout_constraintStart_toEndOf="@+id/ticketTime"
+        app:layout_constraintTop_toTopOf="@+id/ticketTime" />
 
     <TextView
         android:id="@+id/ticketTime"
         android:layout_width="111dp"
         android:layout_height="45dp"
+        android:layout_marginTop="16dp"
+        android:gravity="center"
+        android:text="Время:"
         android:textColor="@color/secondaryBackground"
-        android:text="Время"
-        app:layout_constraintBottom_toBottomOf="@+id/ticketSetTime"
-        app:layout_constraintEnd_toStartOf="@+id/ticketSetTime"
-        app:layout_constraintTop_toTopOf="@+id/ticketSetTime" />
+        android:textSize="19dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.576"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ticketCalendarView" />
 
     <TextView
         android:id="@+id/ticketName"
@@ -118,44 +110,53 @@
         android:id="@+id/textView10"
         android:layout_width="111dp"
         android:layout_height="32dp"
+        android:gravity="center"
         android:text="Итого:"
         android:textColor="@color/secondaryBackground"
+        android:textSize="19dp"
         app:layout_constraintBottom_toBottomOf="@+id/ticketResult"
-        app:layout_constraintEnd_toStartOf="@+id/ticketResult"
+        app:layout_constraintEnd_toEndOf="@+id/ticketNumber"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/ticketNumber"
         app:layout_constraintTop_toTopOf="@+id/ticketResult"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/ticketButton"
         android:layout_width="126dp"
         android:layout_height="64dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="16dp"
-        android:textColor="@color/DarkText"
-        android:text="КУПИТЬ"
+        android:layout_marginTop="8dp"
         android:onClick="ticketComplete"
+        android:text="КУПИТЬ"
+        android:textColor="@color/DarkText"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ticketResult" />
+        app:layout_constraintHorizontal_bias="0.957"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ticketResult"
+        app:layout_constraintVertical_bias="0.157" />
 
     <TextView
         android:id="@+id/ticketResult"
         android:layout_width="111dp"
         android:layout_height="32dp"
-        android:layout_marginTop="460dp"
-        android:layout_marginEnd="16dp"
         android:gravity="center"
         android:text="300Р"
         android:textColor="@color/secondaryBackground"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/ticketTitleBack" />
+        app:layout_constraintHorizontal_bias="0.25"
+        app:layout_constraintStart_toEndOf="@+id/textView10"
+        app:layout_constraintTop_toBottomOf="@+id/ticketCount"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/plus"
         android:layout_width="40dp"
         android:layout_height="45dp"
-        android:layout_marginEnd="16dp"
-        android:text="+"
+        android:layout_marginEnd="12dp"
         android:onClick="plus"
+        android:text="+"
         android:textColor="@color/black"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/ticketNumber"
@@ -168,12 +169,13 @@
         android:layout_width="40dp"
         android:layout_height="45dp"
         android:layout_marginEnd="44dp"
-        android:text="-"
         android:onClick="minus"
+        android:text="-"
         android:textColor="@color/black"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/ticketNumber"
         app:layout_constraintEnd_toStartOf="@+id/plus"
+        app:layout_constraintStart_toEndOf="@+id/ticketNumber"
         app:layout_constraintTop_toTopOf="@+id/ticketNumber"
         app:layout_constraintVertical_bias="0.0" />
 
@@ -181,10 +183,11 @@
         android:id="@+id/ticketCount"
         android:layout_width="32dp"
         android:layout_height="45dp"
-        android:text="1"
         android:gravity="center"
+        android:text="1"
         app:layout_constraintBottom_toBottomOf="@+id/ticketNumber"
         app:layout_constraintEnd_toStartOf="@+id/plus"
+        app:layout_constraintHorizontal_bias="0.583"
         app:layout_constraintStart_toEndOf="@+id/minus"
         app:layout_constraintTop_toTopOf="@+id/ticketNumber" />
 </androidx.constraintlayout.widget.ConstraintLayout>
