--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,6 +2,9 @@
     <!-- Base application theme. -->
     <style name="Theme.CinemaApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="windowActionBarOverlay">true</item>
         <item name="colorPrimary">@color/secondaryBackground</item>
         <item name="colorPrimaryVariant">@color/mainBackground</item>
         <item name="colorOnPrimary">@color/white</item>
