--- a/app/src/main/res/layout/activity_ticket.xml
+++ b/app/src/main/res/layout/activity_ticket.xml
@@ -123,11 +123,11 @@
 
     <Button
         android:id="@+id/ticketButton"
-        android:layout_width="126dp"
+        android:layout_width="wrap_content"
         android:layout_height="64dp"
         android:layout_marginTop="8dp"
         android:onClick="ticketComplete"
-        android:text="ЗАБРОНИРОВАТЬ"
+        android:text="@string/toBook"
         android:textColor="@color/DarkText"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
