--- a/app/src/main/res/layout/item2_view.xml
+++ b/app/src/main/res/layout/item2_view.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main_container2"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -10,6 +11,8 @@
 
     <ImageView
         android:id="@+id/imageView2"
+        app:srcCompat="@drawable/poster10"
+        android:adjustViewBounds="true"
         android:layout_width="100dp"
         android:layout_height="200dp"
         android:layout_marginEnd="10dp" />
@@ -17,6 +20,7 @@
 
     <TextView
         android:id="@+id/name2"
+        android:gravity="center_horizontal"
         android:layout_width="129dp"
         android:layout_height="68dp"
         android:layout_centerHorizontal="true"
@@ -33,8 +37,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/name2"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="65dp"
-        android:layout_marginEnd="281dp"
+        android:layout_marginTop="106dp"
+        android:layout_marginEnd="283dp"
         android:layout_marginBottom="35dp"
         android:textColor="@color/black"
         android:theme="@style/Button.Grey"
