--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -17,12 +17,12 @@
         android:text="Ваши билеты"
         android:textColor="@color/black"
         android:textSize="30sp"
-        android:textStyle="bold"></TextView>
+        android:textStyle="bold" />
 
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_marginTop="40dp"
         android:id="@+id/recyclerview2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp" />
 </RelativeLayout>
