--- a/app/src/main/res/layout/item2_view.xml
+++ b/app/src/main/res/layout/item2_view.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_container2"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -11,21 +11,21 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        app:srcCompat="@drawable/poster10"
-        android:adjustViewBounds="true"
         android:layout_width="100dp"
         android:layout_height="200dp"
-        android:layout_marginEnd="10dp" />
+        android:layout_marginEnd="10dp"
+        android:adjustViewBounds="true"
+        app:srcCompat="@drawable/poster10" />
 
 
     <TextView
         android:id="@+id/name2"
-        android:gravity="center_horizontal"
         android:layout_width="129dp"
         android:layout_height="68dp"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="6dp"
         android:layout_toEndOf="@+id/imageView2"
+        android:gravity="center_horizontal"
         android:textColor="@color/black"
         android:textSize="15sp"
         android:theme="@style/Button.Grey"
