Minor changes in ticket activity design

--- a/app/src/main/res/layout/activity_ticket.xml
+++ b/app/src/main/res/layout/activity_ticket.xml
@@ -61,7 +61,7 @@
         android:id="@+id/ticketNumber"
         android:layout_width="96dp"
         android:layout_height="45dp"
-        android:gravity="center"
+        android:gravity="center_vertical"
         android:text="Количество билетов:"
         android:textColor="@color/secondaryBackground"
         android:textSize="16dp"
@@ -78,6 +78,7 @@
         android:ems="10"
         android:gravity="center"
         android:inputType="time"
+        android:textColor="@color/secondaryBackground"
         android:text="12:00"
         app:layout_constraintBottom_toBottomOf="@+id/ticketTime"
         app:layout_constraintStart_toEndOf="@+id/ticketTime"
@@ -88,7 +89,7 @@
         android:layout_width="111dp"
         android:layout_height="45dp"
         android:layout_marginTop="16dp"
-        android:gravity="center"
+        android:gravity="center_vertical"
         android:text="Время:"
         android:textColor="@color/secondaryBackground"
         android:textSize="19dp"
@@ -110,7 +111,7 @@
         android:id="@+id/textView10"
         android:layout_width="111dp"
         android:layout_height="32dp"
-        android:gravity="center"
+        android:gravity="center_vertical"
         android:text="Итого:"
         android:textColor="@color/secondaryBackground"
         android:textSize="19dp"
@@ -142,6 +143,7 @@
         android:layout_height="32dp"
         android:gravity="center"
         android:text="300Р"
+        android:textSize="20dp"
         android:textColor="@color/secondaryBackground"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
