--- a/app/src/main/res/layout/item2_view.xml
+++ b/app/src/main/res/layout/item2_view.xml
@@ -11,23 +11,28 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="100dp"
+        android:layout_width="130dp"
+        android:layout_marginTop="3dp"
+        android:layout_marginStart="3dp"
         android:layout_height="200dp"
         android:layout_marginEnd="10dp"
         android:adjustViewBounds="true"
+        android:scaleType="fitStart"
         app:srcCompat="@drawable/poster10" />
 
 
     <TextView
         android:id="@+id/name2"
-        android:layout_width="129dp"
-        android:layout_height="68dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="6dp"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/imageView2"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="3dp"
         android:layout_toEndOf="@+id/imageView2"
         android:gravity="center_horizontal"
-        android:textColor="@color/black"
+        android:textColor="@color/DarkText"
         android:textSize="15sp"
+        android:textStyle="bold"
         android:theme="@style/Button.Grey"
         tools:text="Name" />
 
@@ -37,10 +42,13 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/name2"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="106dp"
-        android:layout_marginEnd="283dp"
+        android:layout_marginTop="-84dp"
+        android:layout_marginEnd="281dp"
         android:layout_marginBottom="35dp"
+        android:background="@color/secondaryBackground"
+        android:gravity="center"
         android:textColor="@color/black"
+        android:textSize="9sp"
         android:theme="@style/Button.Grey"
         tools:text="12+" />
 
@@ -50,7 +58,7 @@
         android:layout_height="20sp"
         android:layout_marginLeft="250dp"
         android:text="TextView"
-        android:textColor="@color/secondaryBackground" />
+        android:textColor="@color/DarkText" />
 
     <TextView
         android:id="@+id/time"
@@ -60,7 +68,7 @@
         android:layout_marginLeft="250dp"
         android:layout_marginTop="5dp"
         android:text="TextView"
-        android:textColor="@color/secondaryBackground" />
+        android:textColor="@color/DarkText" />
 
     <TextView
         android:id="@+id/numberOfTickets"
@@ -70,7 +78,7 @@
         android:layout_marginLeft="250dp"
         android:layout_marginTop="5dp"
         android:text="TextView"
-        android:textColor="@color/secondaryBackground" />
+        android:textColor="@color/DarkText" />
 
     <TextView
         android:id="@+id/summ"
@@ -80,6 +88,6 @@
         android:layout_marginLeft="250dp"
         android:layout_marginTop="5dp"
         android:text="TextView"
-        android:textColor="@color/secondaryBackground" />
+        android:textColor="@color/DarkText" />
 
 </RelativeLayout>
