Added string file with english localisation. All hardcoded text were moved to strings.xml

--- a/app/src/main/res/layout/activity_film_screen.xml
+++ b/app/src/main/res/layout/activity_film_screen.xml
@@ -18,7 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/secondaryBackground"
-            android:text="Первому игроку приготовиться"
+            android:text="@string/Blank"
             android:textAlignment="center"
             android:textColor="@color/DarkText"
             android:textSize="23sp"
@@ -57,7 +57,7 @@
                         android:layout_gravity="end"
                         android:layout_marginBottom="16dp"
                         android:background="@color/mainBackground"
-                        android:text="12+"
+                        android:text="@string/Blank"
                         android:textColor="@color/secondaryBackground"
                         android:textSize="30sp"
                         app:layout_constraintBottom_toBottomOf="@+id/buyPoster"
@@ -88,7 +88,7 @@
                         android:layout_marginLeft="12dp"
                         android:layout_marginRight="12dp"
                         android:justificationMode="inter_word"
-                        android:text="empty\n\n\n\n\n\n"
+                        android:text="@string/Blank"
                         android:textColor="@color/black"
                         android:textSize="14sp"
                         android:textStyle="bold" />
