--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -12,7 +12,7 @@
         android:layout_width="250dp"
         android:layout_height="45dp"
         android:ems="10"
-        android:hint="Логин"
+        android:hint="@string/Login"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -27,7 +27,7 @@
         android:layout_height="45dp"
         android:autofillHints=""
         android:ems="10"
-        android:hint="Пароль"
+        android:hint="@string/Password"
         android:inputType="textPassword"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -48,7 +48,7 @@
         android:layout_width="250dp"
         android:layout_height="67dp"
         android:onClick="CompleteRegistration"
-        android:text="Зарегестрироваться"
+        android:text="@string/Register"
         android:textColor="@color/black"
         android:theme="@style/Button.Grey"
         app:layout_constraintBottom_toBottomOf="parent"
