--- a/app/src/main/res/layout/activity_ticket.xml
+++ b/app/src/main/res/layout/activity_ticket.xml
@@ -37,7 +37,7 @@
         android:layout_height="39dp"
         android:background="@drawable/rounded_corner"
         android:gravity="center"
-        android:text="Выбор билета"
+        android:text="@string/TicketChoose"
         android:textColor="@color/DarkText"
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="@+id/ticketTitleBack"
@@ -62,9 +62,9 @@
         android:layout_width="96dp"
         android:layout_height="45dp"
         android:gravity="center_vertical"
-        android:text="Количество билетов:"
+        android:text="@string/AmountOfTickets"
         android:textColor="@color/secondaryBackground"
-        android:textSize="16dp"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@+id/ticketTime"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/ticketTime"
@@ -79,7 +79,7 @@
         android:gravity="center"
         android:inputType="time"
         android:textColor="@color/secondaryBackground"
-        android:text="12:00"
+        android:text="@string/StockTime"
         app:layout_constraintBottom_toBottomOf="@+id/ticketTime"
         app:layout_constraintStart_toEndOf="@+id/ticketTime"
         app:layout_constraintTop_toTopOf="@+id/ticketTime" />
@@ -90,9 +90,9 @@
         android:layout_height="45dp"
         android:layout_marginTop="16dp"
         android:gravity="center_vertical"
-        android:text="Время:"
+        android:text="@string/Time"
         android:textColor="@color/secondaryBackground"
-        android:textSize="19dp"
+        android:textSize="19sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.576"
         app:layout_constraintStart_toStartOf="parent"
@@ -102,7 +102,7 @@
         android:id="@+id/ticketName"
         android:layout_width="120dp"
         android:layout_height="wrap_content"
-        android:text="Название"
+        android:text="@string/Title"
         app:layout_constraintEnd_toEndOf="@+id/ticketPoster"
         app:layout_constraintStart_toStartOf="@+id/ticketPoster"
         app:layout_constraintTop_toBottomOf="@+id/ticketPoster" />
@@ -112,16 +112,15 @@
         android:layout_width="111dp"
         android:layout_height="32dp"
         android:gravity="center_vertical"
-        android:text="Итого:"
+        android:text="@string/Total"
         android:textColor="@color/secondaryBackground"
-        android:textSize="19dp"
+        android:textSize="19sp"
         app:layout_constraintBottom_toBottomOf="@+id/ticketResult"
         app:layout_constraintEnd_toEndOf="@+id/ticketNumber"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/ticketNumber"
         app:layout_constraintTop_toTopOf="@+id/ticketResult"
         app:layout_constraintVertical_bias="0.0" />
-
     <Button
         android:id="@+id/ticketButton"
         android:layout_width="wrap_content"
@@ -142,8 +141,8 @@
         android:layout_width="111dp"
         android:layout_height="32dp"
         android:gravity="center"
-        android:text="300Р"
-        android:textSize="20dp"
+        android:text="@string/StockPrice"
+        android:textSize="20sp"
         android:textColor="@color/secondaryBackground"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -158,7 +157,7 @@
         android:layout_height="45dp"
         android:layout_marginEnd="12dp"
         android:onClick="plus"
-        android:text="+"
+        android:text="@string/PlusSign"
         android:textColor="@color/black"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/ticketNumber"
@@ -172,7 +171,7 @@
         android:layout_height="45dp"
         android:layout_marginEnd="44dp"
         android:onClick="minus"
-        android:text="-"
+        android:text="@string/MinusSign"
         android:textColor="@color/black"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/ticketNumber"
@@ -186,7 +185,7 @@
         android:layout_width="32dp"
         android:layout_height="45dp"
         android:gravity="center"
-        android:text="1"
+        android:text="@string/StockNumber"
         app:layout_constraintBottom_toBottomOf="@+id/ticketNumber"
         app:layout_constraintEnd_toStartOf="@+id/plus"
         app:layout_constraintHorizontal_bias="0.583"
