--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,8 @@
         android:layout_width="250dp"
         android:layout_height="45dp"
         android:ems="10"
-        android:hint="Логин"
+
+        android:hint="Login"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -27,7 +28,7 @@
         android:layout_height="45dp"
         android:autofillHints=""
         android:ems="10"
-        android:hint="Пароль"
+        android:hint="Password"
         android:inputType="textPassword"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -48,7 +49,7 @@
         android:layout_width="224dp"
         android:layout_height="67dp"
         android:onClick="onClickToMainScreen"
-        android:text="Вход"
+        android:text="@string/Enter"
         android:textColor="@color/black"
         android:theme="@style/Button.Grey"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -75,7 +76,7 @@
         android:layout_width="250dp"
         android:layout_height="48dp"
         android:onClick="onClickToRegister"
-        android:text="Регистрация"
+        android:text="@string/Register"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
