--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -18,7 +18,7 @@
             android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="О приложении:"
+            android:text="@string/AboutApp"
             android:textColor="@color/secondaryBackground"
             android:textSize="24sp"
             android:textStyle="bold" />
